--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ img[alt="article-img"] {
   }
   .img-container::after {
     content: '';
-    background: hsl(var(--clr-primary-cyan) / 0.5) url('/images/icon-view.svg') no-repeat center;
+    background: hsl(var(--clr-primary-cyan) / 0.5) url('./images/icon-view.svg') no-repeat center;
     position: absolute;
     inset: 0;
     opacity: 0;
@@ -143,7 +143,7 @@ img[alt="avatar"] {
 }
 
 .eth::before {
-    content: url('/images/icon-ethereum.svg');
+    content: url('./images/icon-ethereum.svg');
     margin-right: 10px;
 
 }
@@ -154,7 +154,7 @@ img[alt="avatar"] {
 }
 
 .time::before {
-    content: url('/images/icon-clock.svg');
+    content: url('./images/icon-clock.svg');
     margin-right: 10px;
 
 }
